# ML-EvalPro

./: README.md  pyproject.toml
auto_evaluator/: auto_evaluator.py
auto_evaluator/adverserial_test_cases/: adversarial_attack.py  adversarial_attack_factory.py  adversarial_attack_substitute.py  adversarial_evasion_attack.py  attribute_inference_attack.py
auto_evaluator/bias/: categorical_bias.py  feature_bias.py  feature_bias_factory.py  model_bias.py  numerical_bias.py
auto_evaluator/config_files/: system_config.yaml
auto_evaluator/ethical_analysis/: ethical_analysis.py
auto_evaluator/evaluation_metrics/: evaluation_metric.py  evaluators_factory.py
auto_evaluator/gdpr/: gdpr_compliance.py
auto_evaluator/llm/: llm_singleton.py
auto_evaluator/predictor/: normal_predictor.py  predictor.py  probability_predictor.py
auto_evaluator/summary/: summary_interface.py
auto_evaluator/utils/: feature_type.py  validate_model_type.py  validation.py
auto_evaluator/variance/: model_variance_by_test_data.py  model_variance_by_train_test_data.py
ml_eval_pro/: auto_evaluator.py  evaluator.py
ml_eval_pro/adverserial_test_cases/: adversarial_attack.py  adversarial_attack_factory.py  adversarial_attack_substitute.py
ml_eval_pro/bias/: feature_bias_factory.py  model_bias.py
ml_eval_pro/evaluator/: base_evaluator.py  (+12 more)
regression/: evaluation_metrics.py
regression_metrics/: mae.py  mape.py  mean_bias_deviation.py  medae.py  mse.py  r_square_error.py  rmse.py
tests/: test_mae.py  test_mape.py  test_mean_bias_deviation.py  test_medae.py  test_mse.py  test_r_square_error.py  test_rmse.py
utils/: validation.py
(+217 files in other folders)
