[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_evaluator"
version = "0.0.2"
authors = [
    { name="Reem Ayman", email="reemayman5299@gmail.com" },
    { name="Sondos Akram", email="sondosakramm@gmail.com" },
    { name="Omar Marie", email="omarhamed440@gmail.com" },
    { name="Mohamed Maher", email="m.maher525@gmail.com" },
]
description = "A Comprehensive Platform for Automated Testing and Analysis For Supervised Machine Learning Tasks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
]

#[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"